teste para endoint findAll da classe user resource implementado